--- a/jscomp/test/Makefile
+++ b/jscomp/test/Makefile
@@ -70,7 +70,7 @@ OTHERS := literals a test_ari test_export2 test_internalOO test_obj_simple_ffi t
 	ffi_splice_test node_path_test js_string_test string_unicode_test node_fs_test\
 	flow_parser_reg_test	utf8_decode_test stream_parser_test condition_compilation_test semver_test update_record_test installation_test app_root_finder derive_projector_test\
 	gpr_904_test gpr_858_unit2_test inner_unused \
-	bal_set_common bal_tree string_set string_set_test \
+	set_gen bal_tree string_set string_set_test \
 	math_test bal_set_mini gpr_974_test test_cpp
 
 
